core: Remove outdated gdata_parser_int64_to_json_iso8601()

gdata_parser_int64_to_iso8601() now does exactly the same.

https://bugzilla.gnome.org/show_bug.cgi?id=732809